# pgline

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
packaging/arch/: PKGBUILD
src/: app.rs  cli.rs  connection.rs  copy_preflight.rs  error.rs  executor.rs  main.rs  metadata.rs  test_support.rs  transaction.rs
src/commands/: catalog.rs  mod.rs
src/connection/: pgpass.rs  settings.rs
src/output/: mod.rs
src/repl/: completion.rs  highlighter.rs  mod.rs  scanner.rs
