[package]
name = "pgline"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
crossterm = "0.29.0"
futures-util = "0.3.32"
nu-ansi-term = "0.50.3"
rand = "0.9.2"
reedline = "0.49.0"
rpassword = "7.5.4"
rustls-tokio-postgres = { version = "0.5.0", features = ["platform-verifier"] }
shlex = "2.0.1"
tabled = { version = "0.21.0", default-features = false, features = ["std"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-postgres = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
whoami = "2.1.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"
